[package]
name = "trivial_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", optional = true }
sha2 = { version = "0.10.8", default-features = false }

[features]
default = [ "std" ]
std = [ "rand" ]
